Changes in database structure added photo